# termux-tasker

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CI-RELEASE.md  LICENSE  README.md  install.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml  pr-title.yml  release.yml
src/termux_tasker/: android_init.py  app.py  app_state.py  config.py  runner_process.py  runner_validator.py  task_validator.py
src/termux_tasker/resources/: bundled_runners.toml  default.app.toml
src/termux_tasker/ui/base/: __init__.py  confirmation_screen.py  file_browser_screen.py  info_screen.py  info_screen.tcss  input_screen.py  input_screen.tcss  loading_screen.py  log_screen.py  log_screen.tcss  menu_screen.py  menu_screen.tcss  screen.py
src/termux_tasker/ui/base/tcss/: confirmation_screen.tcss  file_browser_screen.tcss  loading_screen.tcss  log_help_screen.tcss  log_screen.tcss  log_settings_screen.tcss  menu_screen.tcss
src/termux_tasker/ui/screens/: __init__.py  _utils.py  bundled_runner.py  bundled_task.py  install_runner.py  install_runner_version.py  install_task.py  install_task_version.py  main_menu.py  runner_menu.py  runner_type.py  runners_screen.py  settings_screen.py  task_menu.py  task_type.py  tasks_menu.py  update_app_version.py
tests/: conftest.py
tests/bdd/: conftest.py  given_steps.py  pilot_driver.py  steps_common.py  test_features.py  then_steps.py  when_steps.py
tests/bdd/features/: app_startup.feature  app_update.feature  idempotency.feature  keyboard.feature  log_screen.feature  main_menu.feature  malformed_task_validation.feature  runner_installation.feature  runner_lifecycle.feature  runner_menu.feature  runner_validation.feature  runners.feature  settings.feature  task_installation.feature  task_menu.feature  tasks.feature  validation.feature
tests/bdd/helpers/: __init__.py  file_helper.py  process_helper.py  settings_helper.py  ui_helper.py  validation_helper.py
tests/resources/runners/sh_runner/: metadata.toml
tests/resources/runners/sh_runner_malformed_no_exec/: metadata.toml
tests/resources/tasks/sh_runner_task_countdown/: metadata.toml  required_file
tests/resources/tasks/sh_runner_task_malformed_no_required_file/: metadata.toml
tests/resources/tasks/sh_runner_task_malformed_wrong_runner_version/: metadata.toml  required_file
tests/ui/base/: confirmation_screen.py  file_browser_screen.py  info_screen.py  input_screen.py  loading_screen.py  log_screen.py  menu_screen.py
tests/unit/: test_runner_process.py  test_runner_validator.py  test_task_validator.py  test_utils.py
tests/unit/ui/base/: test_file_watcher.py  test_log_screen.py
