[project]
name = "termux-tasker"
version = "0.1.0"
description = ""
authors = [
    { name = "kpliuta", email = "9212935+kpliuta@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=8.2.4,<9.0.0)"
]

[dependency-groups]
dev = [
    "textual-dev (>=1.8.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "termux_tasker", from = "src" }]

[tool.poetry.group.dev]
optional = true