[project]
name = "termux-tasker"
version = "0.1.0"
description = "A TUI tool for managing shell-based automation tasks on Termux (Android)"
authors = [
    { name = "kpliuta", email = "9212935+kpliuta@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=8.2.4,<9.0.0)",
    "tomlkit (>=0.13.0,<1.0.0)",
    "packaging (>=24.0,<25.0)"
]

[project.scripts]
termux-tasker = "termux_tasker.app:main"

[project.optional-dependencies]
dev = [
    "textual-dev>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-bdd>=8.0.0",
    "pytest-xdist>=3.0.0",
    "autoflake>=2.3.3",
    "mypy>=1.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto"
filterwarnings = [
    "ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning",
    "ignore:'asyncio.set_event_loop_policy' is deprecated:DeprecationWarning",
]

[tool.poetry]
packages = [{ include = "termux_tasker", from = "src" }]

[tool.poetry.group.dev]
optional = true

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
]
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true